// This is the definition of the syntax of this file so the buffer can interpret the code
syntax = "proto3";

// This option allows the creation of multiple files
option java_multiple_files = true;
// This option sets the destination folder of the service autogenerated files
option java_package = "server.services.authService";
// This option sets the name of the class where the service will be implemented
option java_outer_classname = "AuthServiceImpl";

// This is the name of the folder where all the autogenerated files will be
package authService;

// These are all the REQUEST and RESPONSE messages you need for all the public methods in the service
message LoginRequest {
  string email = 1;
  string password = 2;
}

message RegisterRequest {
  string firstName = 1;
  string lastName = 2;
  string email = 3;
  string password = 4;
  string role = 5;
}

message User {
  string id = 1;
  string firstName = 2;
  string lastName = 3;
  string email = 4;
  string password = 5;
  string role = 6;
}

message ErrorResponse {
  string errorMessage = 1;
}

// This is the service declaration
service Auth {
  // These are the method declarations
  rpc register (RegisterRequest) returns (User) {}
  rpc login (LoginRequest) returns (User) {}
}